--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,12 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
-    }
+  "persistent": true
+    },
+    "test": {
+  "dependsOn": ["^build"],
+  "outputs": []
+}
   }
 }
+
