--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,7 +11,8 @@
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "build-storybook": "storybook build",
-    "storybook": "storybook dev -p 6006"
+    "storybook": "storybook dev -p 6006",
+    "test": "npx vitest run"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
