--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,10 +23,15 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-storybook": "^10.0.8",
+    "jsdom": "^27.2.0",
     "storybook": "^10.0.8",
-    "typescript": "5.9.2"
+    "typescript": "5.9.2",
+    "vite": "^7.2.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.13"
   },
   "dependencies": {
     "react": "^19.2.0",
