--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "test:e2e": "pnpm turbo run dev"
+    "test:e2e": "pnpm turbo run dev",
+    "dev:clean": "kill-port 3002 3001 || true && turbo run dev"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
