--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,10 @@
   "exports": {
     "style": "./src/styles/_variables.scss",
     "./*": "./src/*.tsx",
-    "./scss/*": "./src/styles/*"
+    "./scss/*": "./src/styles/*",
+    "./scss/*": "./src/styles/*",
+    "./src/*": "./src/*",
+    "./package.json": "./package.json"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -36,7 +39,6 @@
     "vitest": "^4.0.13"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
