--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "exports": {
     "style": "./src/styles/_variables.scss",
-    ".": "./src/index.tsx",           // The Main Barrel Entry
-    "./*": "./src/*.tsx",             // Catch-all for components
-    "./scss/*": "./src/styles/*",     // SCSS Entry
-    "./src/*": "./src/*",             // Deep access to src folder
+    ".": "./src/index.tsx",
+    "./*": "./src/*.tsx",
+    "./scss/*": "./src/styles/*",
+    "./src/*": "./src/*",
     "./package.json": "./package.json"
   },
   "scripts": {
