--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,45 +1,24 @@
 {
   "name": "@repo/ui",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
-  "exports": {
-    "style": "./src/styles/_variables.scss",
-    ".": "./src/index.tsx",
-    "./*": "./src/*.tsx",
-    "./src/*": "./src/*",
-    "./scss/*": "./src/styles/*",
-    "./package.json": "./package.json"
-  },
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx",
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "build-storybook": "storybook build",
-    "storybook": "storybook dev -p 6006",
     "test": "npx vitest run"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@storybook/addon-docs": "^10.0.8",
-    "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
-    "@storybook/react-webpack5": "^10.0.8",
-    "@types/node": "^22.15.3",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-storybook": "^10.0.8",
-    "jsdom": "^27.2.0",
-    "storybook": "^10.0.8",
-    "typescript": "5.9.2",
-    "vite": "^7.2.4",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.13"
-  },
-  "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "typescript": "5.9.2"
   }
 }
