--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "test:e2e": "pnpm turbo run dev",
-    "dev:clean": "kill-port 3002 3001 || true && turbo run dev"
+    "dev:clean": "kill-port 3002 3001 || true && turbo run dev",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "prettier": "^3.6.2",
     "turbo": "^2.6.1",
     "typescript": "5.9.2"
