--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
+  "type": "module",
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
+    "lint": "eslint. --max-warnings 0",
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
-    "test": "npx vitest run"
+    "test": "vitest run --passWithNoTests"
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.13"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "typescript": "5.9.2"
+    "@vitejs/plugin-react": "^4.7.0",
+    "jsdom": "^24.0.0",
+    "typescript": "5.9.2",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
