--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "husky": "^9.1.7",
     "prettier": "^3.6.2",
+    "stylelint": "^16.26.1",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-standard-scss": "^16.0.0",
     "turbo": "^2.6.1",
     "typescript": "5.9.3"
   },
