--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,11 +20,17 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@storybook/builder-vite": "^10.1.11",
+    "@storybook/react-vite": "^10.1.11",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.7.0",
     "jsdom": "^24.0.0",
+    "sass": "^1.94.2",
+    "sass-embedded": "^1.97.1",
     "typescript": "5.9.3",
+    "vite-plugin-dts": "^4.5.4",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
