--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,35 +2,40 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
+  "sideEffects": false,
+  "exports": {
+    ".": "./src/index.tsx",
+    "./themes": "./src/themes/index.ts",
+    "./registry": "./src/registry.tsx",
+    "./styles": "./src/styles/index.ts"
+  },
   "main": "./src/index.tsx",
   "types": "./src/index.tsx",
-  "type": "module",
   "scripts": {
     "lint": "eslint. --max-warnings 0",
-    "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "test": "vitest run --passWithNoTests"
+  },
+  "exports": {
+    ".": "./src/index.tsx",
+    "./abstracts": "./src/styles/abstracts/_index.scss",
+    "./base": "./src/styles/base/_index.scss",
+    "./components/Footer": "./src/components/Footer/footer.tsx"
   },
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "vite": "^7.2.4",
-    "vitest": "^4.0.13"
+    "styled-components": ">=6"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@storybook/builder-vite": "^10.1.11",
-    "@storybook/react-vite": "^10.1.11",
     "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "jsdom": "^24.0.0",
-    "sass": "^1.94.2",
-    "sass-embedded": "^1.97.1",
-    "typescript": "5.9.3",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-tsconfig-paths": "^4.3.2"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.2",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "styled-components": "^6.1.0",
+    "typescript": "latest"
   }
 }
