--- a/apps/scrambled-sounds/package.json
+++ b/apps/scrambled-sounds/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "readboot",
+  "name": "scrambled-sounds",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint. --max-warnings 0",
