--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
   "packageManager": "pnpm@10.0.0",
   "engines": {
     "node": ">=22.12.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp",
+      "esbuild",
+      "husky",
+      "@next/swc-linux-x64-gnu",
+      "@next/swc-linux-x64-musl"
+    ]
   }
 }
