--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,12 +24,14 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@testing-library/jest-dom": "^6.9.1",
     "@types/node": "^25.0.3",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "styled-components": "^6.1.0",
-    "typescript": "latest"
+    "typescript": "latest",
+    "vitest": "^4.0.17"
   }
 }
